--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,85 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    background: rgb(0,0,0);
+    width:98vw;
+}
+
 body {
     margin: 0;
     font-family: sans-serif;
+    font: Arial;
+    color: white;
+    width:98vw;
+}
+
+b {
+    color:darkred;
+}
+
+.path {
+    font-size: small;
+}
+
+.wrapper {
+    position:relative;
+    background-color: orange;
+    border:0px;
+    border-radius: 7px;
+    box-shadow: 3px 3px orangered;
+    padding-top: 20px;
+    padding-left: 0px;
+    padding-right:0px;
+    padding-bottom:0px;
+    width:fit-content;
+    hyphens:auto;
+    overflow-wrap: break-word;
+    min-width:300px;
+    max-width:90vw;
+    margin:7px;
+    
+}
+
+.post {
+    word-break: break-all;
+    background: rgb(46, 46, 46);
+    border: 1px solid orange;
+    border-radius: 7px;
+    box-shadow: 3px 3px orangered;
+    padding: 20px;
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 40px;
+    width: inherit;
+    min-width:inherit;
+    max-width:inherit;
+    hyphens:auto;
+    overflow-wrap: break-word;
+    text-align: left;
+    margin: 0px;
+    font-size: smaller;
+}
+
+.post_info {
+    color:black;
+    font-size: small;
+    padding: 3px;
+    position: absolute;
+    top: 0;
+    max-width:90vw;
+}
+
+
+.title {
+    font-weight: 1000;
+    color: orange;
+    text-transform: uppercase;
+}
+
+a:link {
+    color:orange;
+}
+
+a:visited {
+    color:orange;
 }
