--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,7 +2,7 @@ html, body {
     width: 100%;
     height: 100%;
     background: rgb(0,0,0);
-    width:98vw;
+    width:60vw;
 }
 
 body {
@@ -10,15 +10,28 @@ body {
     font-family: sans-serif;
     font: Arial;
     color: white;
-    width:98vw;
-}
-
-b {
-    color:darkred;
+    width:60vw;
+    line-height:x-small;
 }
 
 .path {
     font-size: small;
+}
+
+div[id^='quote'] {
+    display: none;
+}
+
+div[id^='quote']:target {
+    display: block;
+}
+
+div[id^='reply'] {
+    display: none;
+}
+
+div[id^='reply']:target {
+    display: block;
 }
 
 .wrapper {
@@ -46,7 +59,7 @@ b {
     border: 1px solid orange;
     border-radius: 7px;
     box-shadow: 3px 3px orangered;
-    padding: 20px;
+    padding: 5px;
     padding-top: 5px;
     padding-left: 5px;
     padding-right: 40px;
@@ -58,6 +71,28 @@ b {
     text-align: left;
     margin: 0px;
     font-size: smaller;
+}
+
+.quote_reply {
+    font-size: xx-small;
+}
+
+#quote {
+    background-color: rgb(182, 231, 66);
+    color: darkred;
+    border-color: rgb(182, 231, 66);
+    border-radius: 2px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+#reply {
+    background-color: #7DF9FF;
+    color: darkred;
+    border-color: #7DF9FF;
+    border-radius: 2px;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 .post_info {
@@ -82,4 +117,15 @@ a:link {
 
 a:visited {
     color:orange;
+}
+
+textarea {
+    font-family: sans-serif;
+    width: 400px;
+    height: 200px;
+    background-color: rgb(66, 66, 66);
+    color:white;
+    margin:5px;
+    border: 1px solid black;
+    border-radius: 7px;
 }
