--- a/templates/thread.html
+++ b/templates/thread.html
@@ -10,9 +10,16 @@
         <h3>POSTS</h3>
         <div class='path'><a href = "/">Home</a> > /t/{{ thread['_id'] }}</div>
         <br>
+        <a id="topreply" href="#replyt">[Reply]</a>
+        <div class="replybox" id = "replyt">
+            <form actions="/reply/{{ thread['_id'] }}" method="POST">
+                <textarea type = "text" name = "message" id = "message"></textarea><br>
+                <input type = "submit" formaction="/t/{{ thread['_id'] }}" value="[Post]"> <a id="Cancel" href="/t/{{ thread['_id'] }}">[Cancel]</a>
+            </form> 
+        </div>
             {% for post in thread['thread'] %}
 
-                <div class="wrapper">
+                <div class="wrapper" id = "post{{ post['postNum'] }}">
                     <div class="post_info">
                     UserID: <b style="background-color:{{ post['idColor'] }}; color:darkred; border-radius: 2px;" onmouseenter="this.style.backgroundColor='black'; this.style.color='white'" onmouseleave="this.style.backgroundColor='{{ post['idColor'] }}'; this.style.color='darkred'">{{ post['user'] }}</b> <b>·</b> Posted: <b style='color:darkred;'>{{ post['formattedPosted'] }}</b>
                     </div>
@@ -22,38 +29,57 @@
                         {% else %}
                         {% endif %}
                         {% for p in post['message'].split('\n') %}
+                        <p style="margin: 0px;">
                             {% if p[0] == '>' %}
-                                <p style = "margin:0; color:rgb(182, 231, 66)">{{ p }}</p>
+                                <p style = "margin:0; color:lawngreen">{{ p }}
                             {% else %}
-                                <p style = "margin:0">{{ p }}</p>
+                                {% for word in p.split() %}
+                                    {% if link.match(word) %}
+                                        <a id = "postlink{{ word.replace('[','').replace(']','') }}" href="#post{{ word.replace('[','').replace(']','') }}">{{ word }}</a>
+                                    {% elif word == '@OP' or (word[0] == '@' and word|length == 11) %}
+                                        {% for user in thread['threadUsers'] %}
+                                            {% if word[1:] == user['userID'] %}
+                                                <b style="background-color:{{ user['idColor'] }}; color:darkred; border-radius: 2px;" onmouseenter="this.style.backgroundColor='black'; this.style.color='white'" onmouseleave="this.style.backgroundColor='{{ user['idColor'] }}'; this.style.color='darkred'">{{ word }}</b>
+                                            {% else %}
+                                            {% endif %}
+                                        {% endfor %}
+                                    {% else %}
+                                        {{ word }}
+                                    {% endif %}
+                                {% endfor %}    
                             {% endif %}
+                        </p>
                         {% endfor %}
                     <div class="quotebox" id="quote{{ post['postNum'] }}">
                             <form actions="/reply/{{ thread['_id'] }}" method="POST">
-                                <textarea type = "text" name = "message" id = "message">/{{ post['postNum'] }}{% for p in post['message'].split('\n') %}
+                                <textarea type = "text" name = "message" id = "message">[{{ post['postNum'] }}]{% for p in post['message'].split('\n') %}
 >{{ p }}{% endfor %}
 </textarea><br>
-                                <input type = "submit" formaction="/t/{{ thread['_id'] }}" value = "Add"> <a href="/t/{{ thread['_id'] }}">Cancel</a>
+                                <input type = "submit" formaction="/t/{{ thread['_id'] }}" value = "[Post]"> <a id="Cancel" href="/t/{{ thread['_id'] }}">[Cancel]</a>
                             </form>
                     </div>
                     <div class="replybox" id="reply{{ post['postNum'] }}">
                         <form actions="/reply/{{ thread['_id'] }}" method="POST">
-                            <textarea type = "text" name = "message" id = "message">/{{ post['postNum'] }}
+                            <textarea type = "text" name = "message" id = "message">[{{ post['postNum'] }}]
 </textarea><br>
-                            <input type = "submit" formaction="/t/{{ thread['_id'] }}" value = "Add"> <a href="/t/{{ thread['_id'] }}">Cancel</a>
+                            <input type = "submit" formaction="/t/{{ thread['_id'] }}" value = "[Post]"> <a id="Cancel" href="/t/{{ thread['_id'] }}">[Cancel]</a>
                         </form>
                     </div>
                     <br><br>
-                        <div class="quote_reply"> {{ post['postNum'] }} · <a id="reply" href="#reply{{ post['postNum'] }}">[Reply]</a> · <a id="quote" href="#quote{{ post['postNum'] }}">[Quote]</a></div>
+                        <div class="quote_reply"> {{ post['postNum'] }} · <a id="reply" href="#reply{{ post['postNum'] }}">[Reply]</a> · <a id="quote" href="#quote{{ post['postNum'] }}">[Quote]</a> &nbsp 
+                            {% for rp in post['replies'] %} <a id = "postlink{{ rp['reply'] }}" href="#post{{ rp['reply'] }}">[{{ rp['reply'] }}]</a> {% endfor %}</div>
                     </div>
                 </div>
             {% endfor %}
-
+        <a id="bottomreply" href="#replyb">[Reply]</a>
+        <div class="replybox" id = "replyb">
+            <form actions="/reply/{{ thread['_id'] }}" method="POST">
+                <textarea type = "text" name = "message" id = "message"></textarea><br>
+                <input type = "submit" formaction="/t/{{ thread['_id'] }}" value="[Post]"> <a id="Cancel" href="/t/{{ thread['_id'] }}">[Cancel]</a>
+            </form> 
+        </div>
         <br>
-        <form actions="/reply/{{ thread['_id'] }}" method="POST">
-            <label>Message: </label><input type = "text" name = "message" id = "message"><br>
-            <input type = "submit" value="Add">
-        </form> 
+
     </div>
     
 {% endblock %}
