--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,7 +3,31 @@ html, body {
     height: 100%;
     background: rgb(0,0,0);
     width:60vw;
+    scroll-padding: 50px;
 }
+
+.topnav {
+    position:fixed;
+    background-color:rgb(46, 46, 46);
+    top:0px;
+    z-index:9999;
+    width:100vw;
+  }
+  
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: orange;
+    color: black;
+  }
+
 
 body {
     margin: 0;
@@ -51,6 +75,15 @@ div[id^='reply']:target {
     max-width:90vw;
     margin:7px;
     
+}
+
+.media {
+    display:block;
+    float:left;
+}
+
+.media img {
+    float:left;
 }
 
 .post {
@@ -184,10 +217,30 @@ textarea {
     background-color: rgb(66, 66, 66);
     color:white;
     margin:5px;
+    margin-bottom: 1px;
     border: 1px solid black;
     border-radius: 7px;
     outline:none;
+    resize: none;
 }
+
+input[type='file'] {
+    width: 400px;
+    margin: 5px;
+    margin-top: 1px;
+    background-color: BLACK;
+    border:1px dashed;
+    color: orange;
+    border-color: gray;
+    border-radius: 2px;
+    font-weight: bold;
+    font-size: small;
+    text-decoration: none;
+    box-shadow: none;
+    padding:0px;
+    outline:none;
+}
+
 
 textarea:focus {
     outline:none;
