--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
-        {% block head %}{% endblock %}
+        {% block head %}
+        {% endblock %}
     </head>
     <body>
+        <div class="topnav">
+            <a href="/">Home</a>
+            <a href="">Boards</a>
+            <a href="">About</a>
+            <a href="" style="float:right;">Sign In</a>
+        </div>
+
         {% block body %}{% endblock %}
     </body>
 </html>
