--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
             <a href="/">Home</a>
             <a href="">Boards</a>
             <a href="">About</a>
-            <a href="" style="float:right;">Sign In</a>
+            <a href="" style="float:right; margin-right: 20px;">Sign In</a>
         </div>
 
         {% block body %}{% endblock %}
