--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,6 @@
 html,
 body {
+  margin-top: 50px;
   width: 100%;
   height: 100%;
   background: rgb(0, 0, 0);
@@ -19,17 +20,19 @@ body {
   float: left;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 10px 10px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 13px;
 }
 
 .topnav a:hover {
   background-color: orange;
+  border-radius: 3px;
   color: black;
 }
 
 body {
+  top: -20px;
   margin: 0;
   font-family: sans-serif;
   font: Arial;
